insere referencias do Skater e do Redcap

--- a/Referencias.bib
+++ b/Referencias.bib
@@ -1,8 +1,23 @@
+@article{Assuncao2006,
+abstract = {Regionalization is a classification procedure applied to spatial objects with an areal representation, which groups them into homogeneous contiguous regions. This paper presents an efficient method for regionalization. The first step creates a connectivity graph that captures the neighbourhood relationship between the spatial objects. The cost of each edge in the graph is inversely proportional to the similarity between the regions it joins. We summarize the neighbourhood structure by a minimum spanning tree (MST), which is a connected tree with no circuits. We partition the MST by successive removal of edges that link dissimilar regions. The result is the division of the spatial objects into connected regions that have maximum internal homogeneity. Since the MST partitioning problem is NP-hard, we propose a heuristic to speed up the tree partitioning significantly. Our results show that our proposed method combines performance and quality, and it is a good alternative to other regionalization methods found in the literature.},
+author = {Assun{\c{c}}{\~{a}}o, R. M. and Neves, M. C. and C{\^{a}}mara, G. and {Da Costa Freitas}, C.},
+doi = {10.1080/13658810600665111},
+file = {:C$\backslash$:/Users/mateu/Desktop/Assun{\c{c}}{\~{a}}o et al. - 2006 - Efficient regionalization techniques for socio-economic geographical units using minimum spanning trees.pdf:pdf},
+isbn = {1365-8816},
+issn = {13658816},
+journal = {International Journal of Geographical Information Science},
+keywords = {Census data analysis,Constrained clustering,Graph partitioning,Optimization,Regionalization,Zone design},
+number = {7},
+pages = {797--811},
+title = {{Efficient regionalization techniques for socio-economic geographical units using minimum spanning trees}},
+volume = {20},
+year = {2006}
+}
 @article{Qiu2006,
 abstract = {We propose a random cluster generation algorithm that has the desired features: (1) the population degree of separation between clusters and the nearest neighboring clusters can be set to a specified value, based on a separation index; (2) no constraint is imposed on the isolation among clusters in each dimension; (3) the covariance matrices correspond to different shapes, diameters and orientations; (4) the full cluster structures generally could not be detected simply from pair-wise scatterplots of variables; (5) noisy variables and outliers can be imposed to make the cluster structures harder to be recovered. This algorithm is an improvement on the method used in Milligan (1985).},
 author = {Qiu, Weiliang and Joe, Harry},
 doi = {10.1007/s00357-006-0018-y},
-file = {:C$\backslash$:/Users/mateu/OneDrive/Mateus/Aula/TCC/Artigos/Generation of Random Clusters with Specified Degree of Separation.pdf:pdf},
+file = {:C$\backslash$:/Users/mateu/OneDrive/Mateus/Aula/TCC/Artigos/Qiu, Joe - 2006 - Generation of random clusters with specified degree of separation.pdf:pdf},
 issn = {01764268},
 journal = {Journal of Classification},
 keywords = {Cluster generation,Factorial experiment design,Separation index},
@@ -11,4 +26,19 @@ pages = {315--334},
 title = {{Generation of random clusters with specified degree of separation}},
 volume = {23},
 year = {2006}
+}
+@article{Guo2008,
+abstract = {Regionalization is to divide a large set of spatial objects into a number of spatially contiguous regions while optimizing an objective function, which is normally a homogeneity (or heterogeneity) measure of the derived regions. This research proposes and evaluates a family of six hierarchical regionalization methods. The six methods are based on three agglomerative clustering approaches, including the single linkage, average linkage (ALK), and the complete linkage (CLK), each of which is constrained with spatial contiguity in two different ways (i.e. the first-order constraining and the full-order constraining). It is discovered that both the Full-Order-CLK and the Full-Order-ALK methods significantly outperform existing methods across four quality evaluations: the total heterogeneity, region size balance, internal variation, and the preservation of data distribution. Moreover, the proposed algorithms are efficient and can find the solution in O(n{\^{}}2log n) time. With such data scalability, for the first time it is possible to effectively regionalize large data sets that have 10000 or more spatial objects. A detailed comparison and evaluation of the six methods are carried out with the 2004 US presidential election data.},
+author = {Guo, D.},
+doi = {10.1080/13658810701674970},
+file = {:C$\backslash$:/Users/mateu/Desktop/Guo - 2008 - Regionalization with dynamically constrained agglomerative clustering and partitioning (REDCAP).pdf:pdf},
+isbn = {1365-8816$\backslash$n1362-3087},
+issn = {13658816},
+journal = {International Journal of Geographical Information Science},
+keywords = {Constrained clustering,Hierarchical clustering,Regionalization,Segmentation,Spatial data mining,Zoning},
+number = {7},
+pages = {801--823},
+title = {{Regionalization with dynamically constrained agglomerative clustering and partitioning (REDCAP)}},
+volume = {22},
+year = {2008}
 }
